--- a/CSS/cv.css
+++ b/CSS/cv.css
@@ -1,45 +1,33 @@
 @media all and (max-width: 7000px){
-    .menu{
-        list-style: none;
-        display: flex;
-        justify-content:space-around;
-        flex-wrap: wrap;
-        background-color: orange;
-    }
     
-    .menu a{
-        text-decoration: none;
-        display: block;
-        padding: 1.6rem;
-        color: #fff;
-        text-align: center;
-        border-top: 0.1rem solid rgba(255,255,255,0.3);
-        border-bottom: 0.1rem; 
+  .navbar ul{
         font-size: 1.5rem;
-        
+        margin-right: 4rem;
     }
     
-    .menu a:hover{
-        background-color: :(233,184,61);
-        display: block;
-        padding: 1.6rem;
-        background: black;
+    .navbar ul li{
+        text-align: center;
+        margin-left: 4.3rem;
+    }
+
+    .navbar ul li a{
+        color: white;
+    }
+
+    .navbar ul li a:hover
+    {
+        color: black;
     }
     
-    .menu li:last-child a{
-        border-bottom: none;
-    }
     
     html{
         font-size: 15px;
     }
     
     body{
-        background-color: snow;
         border:0.1rem;
         margin: 0 auto;
         width:100%;
-        background:snow;
         overflow-x:hidden; 
         overflow-y:scroll;
     }
@@ -70,6 +58,7 @@
     p{
         color: black;
     }
+    
     h3{
         color: orange;
     }
@@ -78,30 +67,33 @@
         color: white;
     }
     
-    h5{
+    h{
         color: white;
     }
     
     hr{
-        padding-top: 1rem;
-        color: bisque;
+        padding: 1px;
+        color: white;
     }
-
 }
 
 @media all and (max-width: 1366px){
+    
     html{
         font-size: 12px;
     }
+    
     .menu{
         justify-content: center;     
     }
 }
 
 @media all and (max-width: 700px){
+    
     html{
         font-size: 10px;
     }
+    
     .menu{
         justify-content: space-around;
         flex-direction: column;
@@ -110,6 +102,7 @@
     .menu a{
         padding: 0.8rem; 
     }
+    
     .menu a:hover{
         background-color: :(233,184,61);
         padding: 0.8rem;
@@ -117,8 +110,7 @@
     
     .center ul li{
        text-align: center;
-    }
-    
+    } 
 }
     
 
