--- a/CSS/iletisim.css
+++ b/CSS/iletisim.css
@@ -1,4 +1,5 @@
 @media all and (max-width: 7000px){
+    
     .navbar ul{
         font-size: 1.5rem;
         margin-right: 4rem;
@@ -13,8 +14,7 @@
         color: white;
     }
 
-    .navbar ul li a:hover
-    {
+    .navbar ul li a:hover{
         color: black;
     }
 
@@ -23,22 +23,19 @@
     }
     
     body{
-        background-color: snow;
         border:0.1rem;
         margin: 0 auto;
         width:100%;
-        background:snow;
         overflow-x:hidden; 
         overflow-y:scroll;
+        background: url("/resimler/landscape-photography-of-mountains-covered-in-snow-691668.jpg");
     }
 
     main{
         border-radius:5px;
-        background-color: snow;
         display: block;
         margin-left: 5%;
         margin-right: 5%;
-        background-color: snow; 
     } 
     
     img{
@@ -48,6 +45,39 @@
         width: 90%;;
         border-radius: 1rem;
     }
+    
+    h3{
+        text-align: center;
+    }
+    
+    .form-group{
+        margin-top: 2rem;
+    }
+    
+    .form-group input:focus{
+        outline: 0;
+    }
+    
+    input[type=submit]{
+      margin-left: 18rem;
+      padding:8px 20px;
+      border: 1px solid orange;
+      border-left: 3px solid;
+      border-left-color:salmon; 
+      border-radius: 5px;
+      margin-top: 3rem;
+      font-size: 1.5rem;
+    }
+
+    input[type=reset]{
+       padding:8px 20px;
+      border: 1px solid orange;
+      border-left: 3px solid;
+      border-left-color:salmon; 
+      border-radius: 5px;
+      margin-top: 3rem;
+      font-size: 1.5rem;
+    }
 }
 
 @media all and (max-width: 1366px){
@@ -55,19 +85,32 @@
     html{
         font-size: 12px;
     }
-}
-
-@media all and (max-width: 700px){
-    html{
-        font-size: 10px;
+    
+    input[type=submit]{
+        margin-left: 10rem;
+        font-size: 1.2rem;
+    }
+    
+    input[type=reset]{ 
+        font-size:1.2rem;
     }
 }
 
-
-
-
-
-
+@media all and (max-width: 700px){
+    
+    html{
+        font-size: 10px;
+    }
+    
+    input[type=submit]{
+        margin-left: 7rem;
+        font-size: 1rem;
+    }
+    
+    input[type=reset]{ 
+        font-size:1rem;
+    }
+}
 
 
 
