--- a/CSS/yerler.css
+++ b/CSS/yerler.css
@@ -1,33 +1,22 @@
 @media all and (max-width: 7000px){
-    .menu{
-        list-style: none;
-        display: flex;
-        justify-content:space-around;
-        flex-wrap: wrap;
-        background-color: orange;
-    }
-    
-    .menu a{
-        text-decoration: none;
-        display: block;
-        padding: 1.6rem;
-        color: #fff;
-        text-align: center;
-        border-top: 0.1rem solid rgba(255,255,255,0.3);
-        border-bottom: 0.1rem; 
+     
+    .navbar ul{
         font-size: 1.5rem;
-        
+        margin-right: 4rem;
     }
     
-    .menu a:hover{
-        background-color: :(233,184,61);
-        display: block;
-        padding: 1.6rem;
-        background: black;
+    .navbar ul li{
+        text-align: center;
+        margin-left: 4.3rem;
     }
-    
-    .menu li:last-child a{
-        border-bottom: none;
+
+    .navbar ul li a{
+        color: white;
+    }
+
+    .navbar ul li a:hover
+    {
+        color: black;
     }
     
     html{
@@ -35,27 +24,28 @@
     }
     
     body{
-        background-color: snow;
+        background-color: white;
         border:0.1rem;
         margin: 0 auto;
         width:100%;
-        background:snow;
+        background:white;
         overflow-x:hidden; 
         overflow-y:scroll;
     }
 
     main{
         border-radius:5px;
-        background-color: snow;
+        background-color: white;
         display: block;
         margin-left: 20%;
         margin-right: 20%;
-        background-color: snow; 
+        background-color: white; 
     }
     
     h3{
         text-align: center;
         font-size: 2rem;
+        padding-bottom: 1rem;
     }
     
     h4{
@@ -72,8 +62,8 @@
         margin-left: 10%;
         margin-right: 10%;
         width: 80%;
-        height: 80%;
         border-radius: 1rem;
+        padding: 2rem;
     }
     
        iframe{
@@ -87,6 +77,7 @@
 }
 
 @media all and (max-width: 1366px){
+    
     html{
         font-size: 12px;
     }
@@ -99,9 +90,11 @@
 }
 
 @media all and (max-width: 700px){
+    
     html{
         font-size: 10px;
     }
+    
     .menu{
         justify-content: space-around;
         flex-direction: column;
@@ -110,6 +103,7 @@
     .menu a{
         padding: 0.8rem; 
     }
+    
     .menu a:hover{
         background-color: :(233,184,61);
         padding: 0.8rem;
